# RoutingWithCellRepositioning

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_docker.sh  compile.sh  gdb.sh  gdbserver.sh  run.sh
cases/: case3.tgz  cases.tgz
src/: Functions.cpp  Functions.hpp  GGridBoundaryIdx.cpp  GGridBoundaryIdx.hpp  Global.h  MaxCellMove.cpp  MaxCellMove.hpp  NumCellInst.cpp  NumCellInst.hpp  NumLayers.cpp  NumLayers.hpp  NumMasterCell.cpp  NumMasterCell.hpp  NumNeighborCellExtraDemand.cpp  NumNeighborCellExtraDemand.hpp  NumNonDefaultSupplyGGrid.cpp  NumNonDefaultSupplyGGrid.hpp  NumRoutes.cpp  NumRoutes.hpp  Output.cpp  Output.hpp  main.cpp
